# audio-visualization-tauri

./: .gitignore  README.md  package-lock.json  package.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Renderer.svelte
