[package]
name = "audio-visualization-tauri"
version = "1.0.0-indev"
description = "A Tauri App"
authors = ["Picorims<picorims.contact@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Picorims/audio-visualization-tauri.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "path-all", "fs-remove-file", "fs-copy-file", "fs-rename-file", "fs-read-file", "dialog-message", "shell-sidecar", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectrum-analyzer = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
